<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    tools:context="findme_unisociesc.lucaskonradfranca.com.br.findme_unisociesc.LoginActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="findme_unisociesc.lucaskonradfranca.com.br.findme_unisociesc.LoginActivity"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:weightSum="1">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/idHelpLogin"
            android:layout_gravity="right"
            android:src="@drawable/ic_help" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/idImgLogo"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/icon_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nome_app"
            android:id="@+id/idTxtNomeApp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/texto_login"
            android:id="@+id/idLabelLogin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_EditText"
            android:id="@+id/idEdtLogin"
            android:maxLines="1"
            android:inputType="number|text"
            android:elegantTextHeight="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_senha"
            android:id="@+id/idLabelSenha"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_EditText"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/idEdtSenha" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manter_logado"
            android:id="@+id/idCheckManterLogado"
            android:layout_gravity="center_horizontal"
            android:checked="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_logar"
            android:id="@+id/idBtnEntrar"
            android:layout_gravity="center_horizontal" />

        <!--
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_cadastrar"
            android:layout_marginBottom="5dp"
            android:id="@+id/idBtnCadastrar"
            android:layout_gravity="center_horizontal"/>

            -->
    </LinearLayout>
</ScrollView>
