<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="findme_unisociesc.lucaskonradfranca.com.br.findme_unisociesc.PrincipalActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="195dp"
                android:layout_height="match_parent"
                android:text="@string/botao_atualizar"
                android:id="@+id/idBotaoAtualizar"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/botao_localizar"
                android:id="@+id/idBotaoLocalizar"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/minha_localizacao"
            android:id="@+id/idTxtLocalizacao"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/terreo"
            android:id="@+id/idImagemLocalizacao"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.08" />



    </LinearLayout>
</ScrollView>