<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="findme_unisociesc.lucaskonradfranca.com.br.findme_unisociesc.PrincipalActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusable="false"
            android:background="@drawable/layout_rounded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/privacidade"
                android:id="@+id/idTxtPrivacidade"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Quem poderá ver a sua localização?"
                android:id="@+id/idTxtRadio"
                android:layout_below="@+id/idTxtPrivacidade" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idRadioGroupPrivacidade"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/idTxtRadio">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Todos"
                    android:id="@+id/idRBTodos" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Apenas amigos"
                    android:id="@+id/idRBAmigos" />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ninguém"
                    android:id="@+id/idRBNinguem" />
            </RadioGroup>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_confirmar"
            android:id="@+id/idBtnConfirmarCfg"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idEditSenha"
            android:layout_alignParentLeft="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_cancelar"
            android:id="@+id/idBtnCancelarCfg"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idBtnConfirmar"
            android:layout_alignParentLeft="true" />

    </LinearLayout>
</ScrollView>